# strider

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yaml  test.yml
docs/: api.md  index.md  installation.md
examples/: 01_dna_thermodynamics.py  02_hairpin_folding.py  03_tmsd_kinetics.py  04_sequence_design.py  05_leakage_and_screening.py  06_parameter_sweep.py  07_cha_to_mantis.py  08_tube_analysis.py  09_dynamical_design.py  10_domain_enumeration.py  11_gradient_design.py  11_quadruplex_aptamer.py  12_shot_noise_lod.py
scripts/: bench_accuracy.py  bench_design.py  bench_mfe.py  bench_vs_nupack.py  bench_vs_primer3.py  download_datasets.py  export_paramset.py  generate_dna_enthalpy_tables.py  validate_loop_decomposition.py
strider/: __init__.py  cli.py  dsd.py  equilibrium.py  tube.py
strider/_compat/: nupack_shim.py
strider/benchmarks/: __init__.py  accuracy.py  runners.py  structure_refs.py
strider/bridge/: mantis_bridge.py
strider/circuits/: __init__.py  base.py  cha.py  cha_architecture.py  checks.py  hcr.py  seesaw.py  translator.py
strider/design/: assay.py  benchmarks.py  constraints.py  decomposition.py  diff_designer.py  mutation.py  objective.py  optimizer.py  policies.py  rerank.py
strider/export/: formats.py
strider/kinetics/: arrhenius.py  enumerator.py  leakage.py  tmsd.py
strider/screen/: offtarget.py
strider/structure/: cotranscriptional.py  dot_bracket.py  mfe.py  mountain.py  pseudoknot.py  quadruplex.py  sampling.py
strider/surface/: __init__.py  labels.py  stochastic.py  thermo.py  transducer.py
strider/sweep/: batch.py  cache.py
strider/thermo/: _dna_enthalpy_generated.py  _param_context.py  diff_design.py  differentiable.py  engine.py  ensemble.py  hairpin.py  modified.py  nn_dna.py  nn_dna_rna.py  nn_rna.py  parameters.py  parameters_dna.py  parameters_native.py  parameters_rna.py  salt.py  structure_thermo.py  train.py  vienna_backend.py
strider/thermo/parameters/: dna-low-salt-50mM-Na.json
strider/viz/: arc.py  circuit_diagram.py  mountain_plot.py
tests/: conftest.py  test_assay.py  test_benchmarks.py  test_bridge.py  test_circuits.py  test_cli.py  test_cotranscriptional.py  test_design.py  test_design_convergence.py  test_design_dynamical.py  test_design_rerank.py  test_diff_design.py  test_differentiable.py  test_dsd.py  test_enumerator.py  test_equilibrium.py  test_formats.py  test_hairpin_tm.py  test_leakage.py  test_mfe.py  test_native_vs_nupack_accuracy.py  test_pair_probs.py  test_parameter_sets.py  test_quadruplex.py  test_sampling.py  test_screener.py  test_stack_vs_nupack.py  test_stochastic_surface.py  test_structure_thermo.py  test_surface.py  test_thermo_dna.py  test_tmsd.py  test_tube.py
